--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
-title: [轩先生的秘密基地]
-description: [## 正在施工中Zzz......]
+title: 轩先生的一场梦
+description:  爱是想要触碰却又收回的手
+logo : /elieen.jpg
+
