--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: 轩先生的一场梦
-description:  爱是想要触碰却又收回的手
+title: 轩先生大冒险
+description:  一个有点菜的轮子发明家
 logo : /asset/elieen.jpg
 
