--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,14 @@
 theme: jekyll-theme-minimal
 title: 轩先生大冒险
-description:  一个有点菜的轮子发明家
+description:  这是一只有点孤独的风力卫星
 logo : /asset/elieen.jpg
 
   
+comments:
+  gitalk: ture
+  clientID: 6d4c42bc436cda0269f3
+  secret: c2035d6e32a0499f95025ec798d357984d6d7a08
+  repo: LeventureQys.github.io
+  owner: LeventureQys
+  admin: LeventureQys
+  distractionFreeMode: true
